@@ -40,6 +40,8 @@
 <p>2022-12-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/msl.c (MSLEntityDeclaration): Report an error if
+xmlAddDocEntity() or xmlAddDtdEntity() fails.</p></li>
 <li><p>coders/svg.c (SVGEntityDeclaration): Report an error if
 xmlAddDocEntity() or xmlAddDtdEntity() fails.</p></li>
 </ul>
